...
        Icon(
            painter = painterResource(id = R.drawable.socials_icon),
            contentDescription = "Socials",
            modifier = modifier
                .size(26.dp)
...
            Icon(
                painter = painterResource(id = R.drawable.notifications_icon),
                contentDescription = "Notifications",

                modifier = modifier
...
            ) {
                Text(
                    text = "Login",
                    color = White,
                    style = TextStyle(
...
                    Icon(
                        Icons.Default.ArrowBackIosNew,
                        contentDescription = "Dismiss",
                        tint = White
                    )
...
                    }
                    Text(
                        text = "Notifications Settings",
                        style = TextStyle(
                            color = White,
...
                            }
                            Text(
                                text = "GBMs",
                                style = getTextStyle(darkMode),
                                modifier = Modifier
...
                            }
                            Text(
                                text = "Workshops",
                                style =  getTextStyle(darkMode),
                                modifier = Modifier
...
                            }
                            Text(
                                text = "Volunteering",
                                style =  getTextStyle(darkMode),
                                modifier = Modifier
...
                ) {
                    Text(
                        text = "Allow for all",
                        style = TextStyle(
                            fontSize = 16.sp,
...
                    }
                    Text(
                        text = "Our Socials",
                        style = TextStyle(
                            color = White,
...
                            )
                            Text(
                                text = "SHPE UF",
                                style = getTextStyle(darkMode),
                                modifier = Modifier
...
                            )
                            Text(
                                text = "FYLP",
                                style = getTextStyle(darkMode),
                                modifier = Modifier
...
                            )
                            Text(
                                text = "MentorSHPE",
                                style = getTextStyle(darkMode),
                                modifier = Modifier
...
                            )
                            Text(
                                text = "GradSHPE",
                                style = getTextStyle(darkMode),
                                modifier = Modifier
...
                            )
                            Text(
                                text = "PKY SHPE",
                                style = getTextStyle(darkMode),
                                modifier = Modifier
...
                            )
                            Text(
                                text = "Linktree",
                                style = getTextStyle(darkMode),
                                modifier = Modifier
...
