...
                .fillMaxWidth()
                .height(90.dp)
        ) {
            Row(
            ) {
                Text(
                    text = "Points Program",
                    style = TextStyle(
                        fontSize = 35.sp,
                        fontFamily = FontFamily(Font(R.font.viga)),
                        fontWeight = FontWeight.Bold,
                        color = Color.White

...

/*
******************************************************
FUNCTION: PointsPercentile()
* Displays the user's points percentile as an animated pie
* chart and for the corresponding semester that is underway.
* Provides the "Redeem Code" button that connects to the
* RedeemPoints() function. Displays total points accumulated
* and point statistics for each semester.
******************************************************
 */
@OptIn(ExperimentalMaterial3Api::class)
@Composable
...
    )

    var openBottomSheet by remember { mutableStateOf(false) }
    val semester = getSemester()
    val percentile: Int

    if (semester == "FALL"){
        percentile = datas.sumOf { it.fallPercentile }
        gradientColor = listOf(
            Color(0xFF2E619E),
            Color(0xFF0A2059)
        )
    }
    else if (semester == "SPRING"){
        percentile = datas.sumOf { it.springPercentile }
        gradientColor = listOf(
            Color(0xFFDE5026),
            Color(0xFF981F14)
            )
    }
...
                        text = getOrdinal(percentile),
                        fontSize = 26.sp,
                        fontWeight = FontWeight.Bold,
                        color = textColor
                    )
                    Text(
                        text = "Percentile",
                        fontSize = 26.sp,
                        fontWeight = FontWeight.Bold,
                        color = textColor
                    )
                    Spacer(modifier = Modifier.height(20.dp))
                }
...
                    .height(60.dp)
                    .width(320.dp)
                    .clip(RoundedCornerShape(12.dp)),
                contentAlignment = Alignment.Center
            ) {
                PercentIndicator(
                    label = "SUMMER",
                    percent = "TOP ${datas.sumOf { it.summerPercentile }}%",
                    number = datas.sumOf { it.summerPoints },
                    modifier = Modifier.fillMaxWidth(),
                    firstGradient = Color(0xFF0B70BA),
                    secondGradient = Color(0xFF84CBFF),
                    dividerColor = Color(0xFF0B70BA)
...
            }
            Spacer(modifier = Modifier.height(50.dp))

            Row(
            ) {
                Text(
                    text = "REDEEM POINTS",
                    style = TextStyle(
                        fontSize = 33.sp,
                        fontFamily = FontFamily(Font(R.font.universltstd)),
                        fontStyle = FontStyle.Italic,
                        fontWeight = FontWeight(700),
                        color = Color(0xFFFFFFFF),
...
            //This is what returns when there is no error message i.e. a successful event code
            //redeem, so the window auto closes.

            Spacer(modifier = Modifier.height(50.dp))

            Text(
                text = "Guests",
                style = TextStyle(
                    fontSize = 25.sp,
                    color = Color(0xFFEDEDED),
                    textAlign = TextAlign.Center,
                ),
            )
...
